cleanup: eliminate IntelliJ Java 25 warnings (#111)
* cleanup: adopt sequenced collection accessors

* cleanup: use Java 25 clamp and sequenced APIs

* cleanup: modernize clamp and record candidates

* cleanup: finish Java 25 inspection migrations